# aidoku-ln-sources

./: LICENSE-MIT  index.json  index.min.json
.github/workflows/: build.yaml  clippy.yaml  pr.yaml
sources/: en.lightnovelpub-v2.aix
src/rust/en.freewebnovel/: Cargo.toml  build.ps1  build.sh
src/rust/en.freewebnovel/res/: filters.json  settings.json  source.json
src/rust/en.freewebnovel/src/: helper.rs  lib.rs  parser.rs
src/rust/en.lightnovelpub/: Cargo.toml  build.ps1
src/rust/en.lightnovelpub/res/: filters.json  settings.json  source.json
src/rust/en.lightnovelpub/src/: lib.rs  parser.rs
